--- a/us/static/style.css
+++ b/us/static/style.css
@@ -101,6 +101,13 @@
     overflow-y: scroll;
     position: relative;
 }
+.player-recomendation {
+    height: 39vh;
+    /* %-height of the viewport */
+    overflow-y: scroll;
+    position: relative;
+}
+
 .player-scout-img{
     width: 120px;
     height: 120px;
@@ -110,5 +117,10 @@
         height: 100%;
         position: relative;
         overflow-y: unset;
+    }
+    .player-recomendation{
+        height: 50%;
+        position: relative;
+        overflow-y: scroll;
     }
 }
