--- a/us/template/ScoutHome.html
+++ b/us/template/ScoutHome.html
@@ -195,8 +195,9 @@
 
 
     </div>
+    {% if user.is_club %}
     <div class="col-lg-3 col-12">
-        <div class="m-3 p-5 rounded bg-white shadow-lg">
+        <div class="m-3 p-5 rounded player-recomendation bg-white shadow-lg">
             <div>
                 <p class="fw-bold">Recommended Players</p>
                 {% for Players in player %}
@@ -216,7 +217,7 @@
 
             </div>
         </div>
-        <div class="m-3 p-5 rounded bg-white shadow-lg">
+        <div class="m-3 p-5 rounded player-recomendation bg-white shadow-lg">
             <div>
                 <p class="fw-bold">Recommended Scouts</p>
                 {% for scouts in scouts %}
@@ -236,6 +237,49 @@
         </div>
         
     </div>
+    {% else %}
+    <div class="col-lg-3 col-12">
+        <div class="m-3 p-5 rounded player-recomendation bg-white shadow-lg">
+            <div>
+                <p class="fw-bold">Recommended Clubs</p>
+                {% for clubs in club %}
+
+                <a class="text-decoration-none text-dark" href="{% url 'clubHome' clubs.id %}">
+                    <div class="d-flex">
+                        <div class="rec-img-club">
+                            <img class="w-100 rounded-circle" src="{{clubs.img.url}}" alt="">
+                        </div>
+                        <p class="ms-2">{{clubs.club_name}}{% if clubs.scouted_by != '' %}
+                            <i class="bi bi-patch-check-fill text-primary"></i>
+                            {% endif %}</p></p>
+                    </div>
+                </a>
+                {% endfor %}
+
+
+            </div>
+        </div>
+        <div class="m-3 p-5 rounded player-recomendation bg-white shadow-lg">
+            <div>
+                <p class="fw-bold">Recommended Scouts</p>
+                {% for scouts in scouts %}
+                {% if scouts.is_staff == 0 %}
+                <a class="text-decoration-none text-dark" href="{% url 'scout-home' scouts.id %}">
+                    <div class="d-flex">
+                        <div class="rec-img-club">
+                            <img class="w-100 rounded-circle" src="{{scouts.img.url}}" alt="">
+                        </div>
+                        <p class="ms-2">{{scouts.first_name}} {{scouts.last_name}} <i class="bi bi-patch-check-fill text-primary"></i></p>
+                    </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+
+            </div>
+        </div>
+        
+    </div>
+    {% endif %}
     {% endfor %}
 </div>
 </html>
